[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["kbalt"]
license = "MIT"
repository = "https://github.com/kbalt/ezk-media"

[workspace.dependencies]
ezk = { version = "0.1", path = "crates/ezk" }
ezk-audio = { version = "0.1", path = "crates/ezk-audio" }
ezk-audio-nodes = { version = "0.1", path = "crates/ezk-audio-nodes" }
ezk-g711 = { version = "0.2", path = "crates/ezk-g711" }
ezk-g722 = { version = "0.1", path = "crates/ezk-g722" }
ezk-rtp = { version = "0.2", path = "crates/ezk-rtp" }
