[workspace]
members = ["crates/*", "sip"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["kbalt"]
license = "MIT"
repository = "https://github.com/kbalt/ezk-media"

[workspace.dependencies]
ezk = { version = "0.1", path = "crates/ezk" }
ezk-audio = { version = "0.1", path = "crates/ezk-audio" }
ezk-audio-nodes = { version = "0.1", path = "crates/ezk-audio-nodes" }
ezk-g711 = { version = "0.2", path = "crates/ezk-g711" }
ezk-g722 = { version = "0.1", path = "crates/ezk-g722" }
ezk-rtp = { version = "0.2", path = "crates/ezk-rtp" }

ezk-session = { version = "0.1", path = "crates/ezk-session" }

[patch.crates-io]
srtp = { git = "https://github.com/kbalt/srtp.git", rev = "d74b29691370687ddffe41f59caadd0a7079cb0e" }
srtp2-sys = { git = "https://github.com/kbalt/srtp2-sys.git", rev = "fb3d67b5ada52d242c2ab5a06e4e6e22db31d601" }
openssl.git = "https://github.com/kbalt/rust-openssl.git"
openssl-sys.git = "https://github.com/kbalt/rust-openssl.git"