[package]
name = "sip"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ezk-session.workspace = true

#sip-types = { version = "0.3", package = "ezk-sip-types" }
#sip-ua = { version = "0.5", package = "ezk-sip-ua" }
#sip-core = { version = "0.5", package = "ezk-sip-core" }
sdp-types = { git = "https://github.com/kbalt/ezk", package = "ezk-sdp-types" }
sip-core = { git = "https://github.com/kbalt/ezk", package = "ezk-sip-core" }
sip-ua = { git = "https://github.com/kbalt/ezk", package = "ezk-sip-ua" }
sip-types = { git = "https://github.com/kbalt/ezk", package = "ezk-sip-types" }
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
async-trait = "0.1.83"
bytesstr = "1.0.2"
local-ip-address = "0.6"

ezk.workspace = true
ezk-rtp.workspace = true
ezk-audio.workspace = true
base64 = "0.22"
