[package]
name = "ezk-audio-nodes"
version = "0.1.2"
description = "audio processing tools which are nice to have in media streaming applications"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ezk.workspace = true
ezk-audio.workspace = true
rubato = "0.16"
futures-util = "0.3"
tokio = { version = "1", features = ["time", "sync"] }

nnnoiseless = { version = "0.5", optional = true }

[features]
nnnoiseless = ["dep:nnnoiseless"]
