[package]
name = "ezk-rtp"
version = "0.2.0"
description = "RTP session implementation & utilities"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ezk.workspace = true

bytes = "1"
rand = "0.8"
time = "0.3"
rtp-types = "0.1"
rtcp-types = "0.1"
