[package]
name = "ezk-session"
version = "0.1.0"
description = "SDP based media sessions, suitable for SIP applications & more"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
bytes = "1"
bytesstr = "1.0.2"
ezk-ice.path = "../ezk-ice"
ezk-rtp.workspace = true
futures-util = "0.3"
log = "0.4"
openssl = "0.10"
rand = "0.9"
sdp-types = { package = "ezk-sdp-types", version = "0.5" }
slotmap = "1.0.7"
srtp = "0.7"
stun-types = { package = "ezk-stun-types", version = "0.3" }
thiserror = "2"


tokio = { version = "1", features = ["net"] }
quinn-udp = "0.5"
local-ip-address = "0.6"
