[package]
name = "ezk"
version = "0.1.2"
description = "Types to build reusable media streaming components"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
slotmap = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-stream = { version = "0.1" }
parking_lot = "0.12"
reusable-box = { version = "0.1", path = "../reusable-box" }
downcast-rs = "1.2"
