[package]
name = "reusable-box"
version = "0.1.0"
description = "A reusable box which allows for Layout changes without reallocation"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
